--- a/GameHub.Repository/GameHub.Repository.csproj
+++ b/GameHub.Repository/GameHub.Repository.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GameHub.Model\GameHub.Model.csproj" />
-    <ProjectReference Include="..\GameHub.Repository\GameHub.Repository.csproj" />
   </ItemGroup>
 
 </Project>
